# Projeto-Final-ATR

./: Dockerfile  README.md  caminhao_main.cpp  docker-compose.yml  hello.cpp  hello_world.py  mosquitto.conf  python.Dockerfile  simulacao_mina.py  start.sh
caminhao_cpp/: CMakeLists.txt
caminhao_cpp/include/: Buffer_Circular.h  IPC_Manager.h  NotificadorEventos.h  Notificador_Eventos.h  config.h  tarefas.h
caminhao_cpp/src/: Buffer_Circular.cpp  IPC_Manager.cpp  NotificadorEventos.cpp  Notificador_Eventos.cpp  leitura_buffer.cpp  logger.cpp  main.cpp  tarefa_coletor_dados.cpp  tarefa_controle_navegacao.cpp  tarefa_logica_comando.cpp  tarefa_monitoramento_falhas.cpp  tarefa_planejamento_rota.cpp  tarefa_tratamento_sensores.cpp
caminhao_embarcado/: CMakeLists.txt  Dockerfile
caminhao_embarcado/include/: Buffer_Circular.h  config.h
caminhao_embarcado/src/: Buffer_Circular.cpp  IPC_Manager.cpp  Notificador_Eventos.cpp  main.cpp  tarefa_coletor_dados.cpp  tarefa_controle_navegacao.cpp  tarefa_logica_comando.cpp  tarefa_monitoramento_falhas.cpp  tarefa_planejamento_rota.cpp  tarefa_tratamento_sensores.cpp
interface_unificada/: cli_gestao.py  gestao_mina.py  main_ui.py  management_view.py  requirements.txt  simulator_view.py
